{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 64,
  "lineage": "a1e3ae4e-24b9-5465-4419-c38d628696fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:internet-gateway/igw-0a4fd711f6652af55",
            "id": "igw-0a4fd711f6652af55",
            "owner_id": "767397833843",
            "tags": {
              "Name": "vpc-projeto3-internet-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-internet-gateway",
              "Project": "Projeto-3"
            },
            "vpc_id": "vpc-010f52eb67abceba2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:route-table/rtb-02512772f2088cea5",
            "id": "rtb-02512772f2088cea5",
            "owner_id": "767397833843",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-projeto3-private-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-private-route-table",
              "Project": "Projeto-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-010f52eb67abceba2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:route-table/rtb-06805381ba9d234ab",
            "id": "rtb-06805381ba9d234ab",
            "owner_id": "767397833843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4fd711f6652af55",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-projeto3-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-public-route-table",
              "Project": "Projeto-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-010f52eb67abceba2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056fbf9fa946027a6",
            "route_table_id": "rtb-02512772f2088cea5",
            "subnet_id": "subnet-0e8abeacd0a3ed368"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0814007bb5abea01c",
            "route_table_id": "rtb-02512772f2088cea5",
            "subnet_id": "subnet-03ab9774b9221e1f4"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b6d277ea11b71eb",
            "route_table_id": "rtb-06805381ba9d234ab",
            "subnet_id": "subnet-05590914293171c8a"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05efa041b703bdb7e",
            "route_table_id": "rtb-06805381ba9d234ab",
            "subnet_id": "subnet-003f520497c5d5480"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:security-group/sg-08a102f7549655de9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a102f7549655de9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07dc4d3ea20c2b019"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250215175723113200000003",
            "name_prefix": "terraform-",
            "owner_id": "767397833843",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "production",
              "Project": "Projeto-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-010f52eb67abceba2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:security-group/sg-07dc4d3ea20c2b019",
            "description": "Acesso ao ec2-n8n",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07dc4d3ea20c2b019",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "acesso para o mundo n8n",
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "acesso para o mundo redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "ec2-n8n",
            "name_prefix": "",
            "owner_id": "767397833843",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-n8n"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ec2-n8n",
              "Project": "Projeto-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-010f52eb67abceba2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:subnet/subnet-0e8abeacd0a3ed368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8abeacd0a3ed368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397833843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-projeto3-private-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-private-subnet-us-east-1a",
              "Project": "Projeto-3"
            },
            "vpc_id": "vpc-010f52eb67abceba2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:subnet/subnet-03ab9774b9221e1f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ab9774b9221e1f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397833843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-projeto3-private-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-private-subnet-us-east-1b",
              "Project": "Projeto-3"
            },
            "vpc_id": "vpc-010f52eb67abceba2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:subnet/subnet-05590914293171c8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05590914293171c8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397833843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-projeto3-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-public-subnet-us-east-1a",
              "Project": "Projeto-3"
            },
            "vpc_id": "vpc-010f52eb67abceba2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:subnet/subnet-003f520497c5d5480",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003f520497c5d5480",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397833843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-projeto3-public-subnet-us-east-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3-public-subnet-us-east-1b",
              "Project": "Projeto-3"
            },
            "vpc_id": "vpc-010f52eb67abceba2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397833843:vpc/vpc-010f52eb67abceba2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0df934f941a38dd7d",
            "default_route_table_id": "rtb-01e79a51223ad4da0",
            "default_security_group_id": "sg-03a8eb5ab107f59e6",
            "dhcp_options_id": "dopt-0823a19c2db024213",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010f52eb67abceba2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e79a51223ad4da0",
            "owner_id": "767397833843",
            "tags": {
              "Name": "vpc-projeto3"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "vpc-projeto3",
              "Project": "Projeto-3"
            }
          }
        }
      ]
    }
  ]
}